# tauri-experiments

./: .gitignore  Cargo.toml  Readme.md
examples/data_store_wry/: Cargo.toml
examples/data_store_wry/src/: main.html  main.rs
examples/disable_js_tauri/: Cargo.toml  Readme.md  tauri.conf.json
examples/disable_js_wry/: Cargo.toml  Readme.md
examples/mac_playground/: Cargo.toml
examples/mac_playground/src/: main.rs
examples/reload_tauri/: Cargo.toml  Readme.md  tauri.conf.json
examples/reload_tauri/html/: index.html
examples/reload_tauri/src/: lib.rs  main.rs
examples/reload_wry/: Cargo.toml  Readme.md
examples/reload_wry/src/: main.html  main.rs
examples/tauri_disable_js/: Cargo.toml  index.html
examples/tauri_disable_js/src/: main.rs
examples/wry_disable_js/: Cargo.toml
examples/wry_disable_js/src/: main.rs
