[workspace]
members = ["examples/*"]
resolver = "2"

[workspace.dependencies]
tauri = { git = "https://github.com/Simon-Laux/tauri", branch = "reload-feature", features = [
    "unstable",
] }

# tauri = { path = "../tauri/crates/tauri", features = ["unstable"] }

tauri-build = { git = "https://github.com/Simon-Laux/tauri", branch = "reload-feature" }

# tauri-build = { path = "../tauri/crates/tauri-build" }
