[workspace]
members = ["examples/*"]
resolver = "2"

[workspace.dependencies]
tauri = { git = "https://github.com/Simon-Laux/tauri", branch = "deltachat-branch", features = [
    "unstable",
] }

# tauri = { path = "../tauri/crates/tauri", features = ["unstable"] }

tauri-build = { git = "https://github.com/Simon-Laux/tauri", branch = "deltachat-branch" }

# tauri-build = { path = "../tauri/crates/tauri-build" }

wry = { git = "https://github.com/Simon-Laux/wry", branch = "deltachat-branch" }
